# 2026-AI-Development

./: .gitignore  LICENSE  README.md
data_practice/: numpy.ipynb  panda.ipynb  plot.ipynb
lecture_1/: Makefile  pyproject.toml
lecture_1/notebooks/: lecture_1_openrouter_api_testing.ipynb
lecture_1/slides/: lecture_1.tex
lecture_2/: Dockerfile  Makefile  pyproject.toml
lecture_2/notebooks/: resume_screening.ipynb  resume_utils.py
lecture_2/slides/: lecture_2.tex
lecture_3/: Makefile  pyproject.toml
lecture_3/notebooks/: lecture_3_resume_scorer_improvement.ipynb
lecture_3/slides/: lecture_3.tex
lecture_4/: Makefile  pyproject.toml
lecture_4/notebooks/: agent_utils.py  lecture_4_application_routing_agent.ipynb
lecture_4/slides/: lecture_4.tex
